--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,3 +4,12 @@ Just customize your theme here.
 ================================================== */
 
 body {}
+.carousel-item {
+  height: 100vh;
+  min-height: 350px;
+  background: no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
