--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,8 +5,8 @@ Just customize your theme here.
 
 body {}
 .carousel-item {
-  width: 100%
-  height: 240;
+  width: 320px;
+  height: 240px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
