--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,11 +5,17 @@ Just customize your theme here.
 
 body {}
 .carousel-item {
-  width: 320px;
+  width: 100%;
   height: 240px;
   background: no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+.carousel-control-next {
+  backgound: transparent;
+}
+.carousel-control-prev {
+  background: transparent;
 }
