--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,15 +1,22 @@
 <form action="https://getform.io/f/0edc9d45-f7d5-466f-b5be-26b15094b977" method="POST">
+    <label>Name</label>
     <input type="text" name="name">
+    <label>Email</label>
     <input type="email" name="email">
+    <label>Message</label>
     <input type="text" name="message">
     <!-- add hidden Honeypot input to prevent spams -->
     <input type="hidden" name="_gotcha" style="display:none !important">
     <!-- checkbox handle -->
+    <label>checkbox subscribe</label>
     <input type="checkbox" name="subscribe" value="yes" checked>
     <input type="hidden" name="subscribe" value="no">
     <!-- radio button handle -->
+    <label>Male</label>
     <input type="radio" name="gender" value="male" checked>
+    <label>Female</label>
     <input type="radio" name="gender" value="female">
+    <label>Other</label>
     <input type="radio" name="gender" value="other">
     <!-- select field handle -->
     <select name="work-experience">
