--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,28 +1,40 @@
 <form action="https://getform.io/f/0edc9d45-f7d5-466f-b5be-26b15094b977" method="POST">
-    <label>Name</label><br>
-    <input type="text" name="name"><br>
+<p>Dengan mengisi ini, anda sudah bersedia syarat dan ketentuan yang berlaku di ID Tech Channel.</p>    
+    <label>Nama</label><br>
+    <input type="text" name="Nama"><br><br>
     <label>Email</label><br>
-    <input type="email" name="email"><br>
-    <label>Message</label><br>
-    <input type="text" name="message"><br><br>
+    <input type="email" name="Email"><br><br>
     <!-- add hidden Honeypot input to prevent spams -->
     <input type="hidden" name="_gotcha" style="display:none !important">
-    <!-- checkbox handle -->
-    <label>check for subscribe</label>
-    <input type="checkbox" name="subscribe" value="yes" checked>
-    <input type="hidden" name="subscribe" value="no"><br><br>
     <!-- radio button handle -->
-    <input type="radio" name="gender" value="male" checked><label>Male</label><br>
-    <input type="radio" name="gender" value="female"><label>Female</label><br>
-    <input type="radio" name="gender" value="other"><label>Other</label><br><br>
+    <label>Jenis Kelamin</label><br>
+    <input type="radio" name="gender" value="Pria" checked><label>Pria</label><br>
+    <input type="radio" name="gender" value="Wanita"><label>Wanita</label><br><br>
     <!-- select field handle -->
-    <label>Select for subscribe years</label><br>
-    <select name="work-experience">
-        <option value="one-year">1 years</option>
-        <option value="two-years">2 years</option>
-        <option value="tree-years">3 years</option>
-        <option value="four-years">4 years</option>
-        <option value="five-years">5 years</option>
+    <label>Pilih Berlangganan Config</label><br>
+    <select name="Berlangganan">
+        <option value="1 Bulan">1 Bulan</option>
+        <option value="3 Bulan">3 Bulan</option>
+        <option value="6 Bulan">6 Bulan</option>
+        <option value="9 Bulan">9 Bulan</option>
+        <option value="1 Tahun">1 Tahun</option>
     </select><br><br>
+    <label>Pilih Metode Pembayaran</label><br>
+    <select name="Metode Pembayaran">
+        <option value="Shopee">Shopee Pay</option>
+        <option value="Dana">Dana</option>
+        <option value="Saweria">Saweria</option>
+        <option value="Sociabuzz">Sociabuzz</option>
+        <option value="Paypal">Paypal</option>
+    </select><br><br>
+    <label>Pesan</label><br>
+    <input type="text" name="Pesan"><br><br>
     <button type="submit">Send</button>
 </form>
+
+<h3>Keterangan:</h3>
+<p>Metode pembayaran Shopeepay melalui <a href=""><b>DISINI</b></a>.</p>
+<p>Metode pembayaran Dana melalui <a href=""><b>DISINI</b></a>.</p>
+<p>Metode pembayaran Saweria melalui <a href=""><b>DISINI</b></a>.</p>
+<p>Metode pembayaran Sociabuzz melalui <a href=""><b>DISINI</b></a>.</p>
+<p>Metode pembayaran Paypal melalui <a href=""><b>DISINI</b></a>.</p>
