--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,15 +1,15 @@
 <form action="https://getform.io/f/0edc9d45-f7d5-466f-b5be-26b15094b977" method="POST">
 <p>Dengan mengisi ini, anda sudah bersedia syarat dan ketentuan yang berlaku di ID Tech Channel.</p>    
     <label>Nama</label><br>
-    <input type="text" name="Nama"><br><br>
+    <input type="text" name="Nama"><br>
     <label>Email</label><br>
-    <input type="email" name="Email"><br><br>
+    <input type="email" name="Email"><br>
     <!-- add hidden Honeypot input to prevent spams -->
     <input type="hidden" name="_gotcha" style="display:none !important">
     <!-- radio button handle -->
     <label>Jenis Kelamin</label><br>
     <input type="radio" name="gender" value="Pria" checked><label>Pria</label><br>
-    <input type="radio" name="gender" value="Wanita"><label>Wanita</label><br><br>
+    <input type="radio" name="gender" value="Wanita"><label>Wanita</label><br>
     <!-- select field handle -->
     <label>Pilih Berlangganan Config</label><br>
     <select name="Berlangganan">
@@ -18,7 +18,7 @@
         <option value="6 Bulan">6 Bulan</option>
         <option value="9 Bulan">9 Bulan</option>
         <option value="1 Tahun">1 Tahun</option>
-    </select><br><br>
+    </select><br>
     <label>Pilih Metode Pembayaran</label><br>
     <select name="Metode Pembayaran">
         <option value="Shopee">Shopee Pay</option>
@@ -29,12 +29,12 @@
     </select><br><br>
     <label>Pesan</label><br>
     <input type="text" name="Pesan"><br><br>
-    <button type="submit">Send</button>
+    <button type="submit">Send</button><br>
 </form>
 
 <h3>Keterangan:</h3>
-<p>Metode pembayaran Shopeepay melalui <a href=""><b>DISINI</b></a>.</p>
-<p>Metode pembayaran Dana melalui <a href=""><b>DISINI</b></a>.</p>
-<p>Metode pembayaran Saweria melalui <a href=""><b>DISINI</b></a>.</p>
-<p>Metode pembayaran Sociabuzz melalui <a href=""><b>DISINI</b></a>.</p>
-<p>Metode pembayaran Paypal melalui <a href=""><b>DISINI</b></a>.</p>
+<p>Metode pembayaran Shopeepay melalui <a href=""><b>DISINI</b></a>.<br>
+Metode pembayaran Dana melalui <a href=""><b>DISINI</b></a>.<br>
+Metode pembayaran Saweria melalui <a href=""><b>DISINI</b></a>.<br>
+Metode pembayaran Sociabuzz melalui <a href=""><b>DISINI</b></a>.<br>
+Metode pembayaran Paypal melalui <a href=""><b>DISINI</b></a>.</p>
