--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -4,6 +4,8 @@
     <input type="text" name="Nama"><br>
     <label>Email</label><br>
     <input type="email" name="Email"><br>
+    <label>Nomer Whatsapp</label><br>
+    <input type="phone" name="Whatsapp"><br>
     <!-- add hidden Honeypot input to prevent spams -->
     <input type="hidden" name="_gotcha" style="display:none !important">
     <!-- radio button handle -->
@@ -33,8 +35,9 @@
 </form>
 
 <h3>Keterangan:</h3>
-<p>Metode pembayaran Shopeepay melalui <a href=""><b>DISINI</b></a>.<br>
-Metode pembayaran Dana melalui <a href=""><b>DISINI</b></a>.<br>
-Metode pembayaran Saweria melalui <a href=""><b>DISINI</b></a>.<br>
-Metode pembayaran Sociabuzz melalui <a href=""><b>DISINI</b></a>.<br>
-Metode pembayaran Paypal melalui <a href=""><b>DISINI</b></a>.</p>
+<p>1. Metode pembayaran Shopeepay melalui <a href=""><b>DISINI</b></a>.<br>
+2. Metode pembayaran Dana melalui <a href=""><b>DISINI</b></a>.<br>
+3. Metode pembayaran Saweria melalui <a href=""><b>DISINI</b></a>.<br>
+4. Metode pembayaran Sociabuzz melalui <a href=""><b>DISINI</b></a>.<br>
+5. Metode pembayaran Paypal melalui <a href=""><b>DISINI</b></a>.<br>
+6. Jika sudah melakukan pembayaran, anda akan kami hubungi untuk intruksi lebih lanjut.</p>
