--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -15,6 +15,7 @@
     <!-- select field handle -->
     <label>Pilih Berlangganan Config</label><br>
     <select name="Berlangganan">
+        <option value="None">Pilih Langganan</option>
         <option value="1 Bulan">1 Bulan</option>
         <option value="3 Bulan">3 Bulan</option>
         <option value="6 Bulan">6 Bulan</option>
@@ -23,6 +24,7 @@
     </select><br>
     <label>Pilih Metode Pembayaran</label><br>
     <select name="Metode Pembayaran">
+        <option value="None">Pilih Metode</option>
         <option value="Shopee">Shopee Pay</option>
         <option value="Dana">Dana</option>
         <option value="Saweria">Saweria</option>
@@ -30,14 +32,14 @@
         <option value="Paypal">Paypal</option>
     </select><br><br>
     <label>Pesan</label><br>
-    <input type="text" name="Pesan"><br><br>
-    <button type="submit">Send</button><br>
+    <input type="text" name="Pesan"><br>
+    <button type="submit">Send</button><br><br>
 </form>
 
-<h3>Keterangan:</h3>
+<h5>Keterangan:</h5>
 <p>1. Metode pembayaran Shopeepay melalui <a href=""><b>DISINI</b></a>.<br>
 2. Metode pembayaran Dana melalui <a href=""><b>DISINI</b></a>.<br>
 3. Metode pembayaran Saweria melalui <a href=""><b>DISINI</b></a>.<br>
 4. Metode pembayaran Sociabuzz melalui <a href=""><b>DISINI</b></a>.<br>
 5. Metode pembayaran Paypal melalui <a href=""><b>DISINI</b></a>.<br>
-6. Jika sudah melakukan pembayaran, anda akan kami hubungi untuk intruksi lebih lanjut.</p>
+6. Jika sudah melakukan pembayaran, anda akan kami cek terlebih dahulu sebelum kami hubungi untuk intruksi lebih lanjut.</p>
