--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,12 +44,10 @@ gtag('config', '{{site.ganalytics}}');
           {% else %}
           <span class="d-none d-md-inline-block">{{ site.title }}</span>
           {% endif %}
-          </a> | 
+          </a>
           
 
           <div class="d-flex align-items-center">
-            
-            <span class="ml-3 text-muted small">Follow</span>
 
             <a class="d-inline-block social-icon" target="_blank" href="{{site.social.twitter}}">
               <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
@@ -119,7 +117,7 @@ gtag('config', '{{site.ganalytics}}');
     {% endfor %}
     </ul>
     <div class="copyright small">
-       Copyright © {{site.title}}. All rights reserved.
+       Copyright ©2018-2023 {{site.title}}. All rights reserved.
     </div>
 </footer>
 
