--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -36,7 +36,7 @@
     <button type="submit">Send</button><br><br>
 </form>
 
-<h5>Keterangan:</h5>
+<h5><span>Catatan</span></h5>
 <p>1. Metode pembayaran Shopeepay melalui <a href=""><b>DISINI</b></a>.<br>
 2. Metode pembayaran Dana melalui <a href=""><b>DISINI</b></a>.<br>
 3. Metode pembayaran Saweria melalui <a href=""><b>DISINI</b></a>.<br>
