--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,8 @@
-<div class="sidebar sticky-top">        
+<div class="sidebar sticky-top">
+    <div class="sidebar-section">
+        <h5><span>Advertising</span></h5>
+        <img src="{{site.baseurl}}/assets/images/ad.png">
+    </div>
     <div class="sidebar-section">
         <h5><span>Langganan Config</span></h5>
         {% include newsletter.html %}
