--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,17 +1,14 @@
 <form action="https://getform.io/f/0edc9d45-f7d5-466f-b5be-26b15094b977" method="POST">
-<p>Dengan mengisi ini, anda sudah bersedia syarat dan ketentuan yang berlaku di ID Tech Channel.</p>    
-    <label>Nama</label><br>
-    <input type="text" name="Nama"><br>
-    <label>Email</label><br>
-    <input type="email" name="Email"><br>
-    <label>Nomer Whatsapp</label><br>
-    <input type="phone" name="Whatsapp"><br>
+<p>Dengan mengisi ini, anda sudah bersedia syarat dan ketentuan yang berlaku di ID Tech Channel.</p>
+    <input type="text" name="Nama" placeholder="Nama..." required><br><br>
+    <input type="email" name="Email" placeholder="Email..." required><br><br>
+    <input type="phone" name="Whatsapp" placeholder="Nomer Whatsapp..." required><br><br>
     <!-- add hidden Honeypot input to prevent spams -->
     <input type="hidden" name="_gotcha" style="display:none !important">
     <!-- radio button handle -->
     <label>Jenis Kelamin</label><br>
-    <input type="radio" name="gender" value="Pria" checked><label>Pria</label><br>
-    <input type="radio" name="gender" value="Wanita"><label>Wanita</label><br>
+    <input type="radio" name="gender" value="Pria" checked><label>Pria</label>
+    <input type="radio" name="gender" value="Wanita"><label>Wanita</label><br><br>
     <!-- select field handle -->
     <label>Pilih Berlangganan Config</label><br>
     <select name="Berlangganan">
@@ -21,7 +18,7 @@
         <option value="6 Bulan">6 Bulan</option>
         <option value="9 Bulan">9 Bulan</option>
         <option value="1 Tahun">1 Tahun</option>
-    </select><br>
+    </select><br><br>
     <label>Pilih Metode Pembayaran</label><br>
     <select name="Metode Pembayaran">
         <option value="None">Pilih Metode</option>
@@ -31,9 +28,8 @@
         <option value="Sociabuzz">Sociabuzz</option>
         <option value="Paypal">Paypal</option>
     </select><br><br>
-    <label>Pesan</label><br>
-    <input type="text" name="Pesan"><br>
-    <button type="submit">Send</button><br><br>
+    <textarea rows="8" class="form-control mb-3" name="message" placeholder="Pesan ke admin..." required></textarea><br><br>
+    <button type="submit">Kirim</button><br><br>
 </form>
 
 <h5><span>Catatan</span></h5>
