--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,16 @@
 <div class="sidebar sticky-top">
     <div class="sidebar-section">
         <h5><span>Advertising</span></h5>
-        <img src="{{site.baseurl}}/assets/images/ad.png">
+        <!-- sidebar -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1794381705838564"
+     data-ad-slot="7556196784"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </div>
     <div class="sidebar-section">
         <h5><span>Langganan Config</span></h5>
@@ -9,6 +18,15 @@
     </div>
     <div class="sidebar-section">
         <h5><span>Advertising</span></h5>
-        <img src="{{site.baseurl}}/assets/images/ad.png">
+        <!-- sidebar -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1794381705838564"
+     data-ad-slot="7556196784"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </div>
 </div>
