--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -82,7 +82,17 @@ post_class: post-template
               {% endif %}
             </div>
             <!-- End Prev/Next -->
-            
+<br>         
+<!-- horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1794381705838564"
+     data-ad-slot="4999984509"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script><br>  
             
              <!-- Author Box -->
                 {% if page.author %}				
