--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,8 +95,28 @@ gtag('config', '{{site.ganalytics}}');
     
 <!-- Container
 ================================================== -->    
-<main class="container">   
-      {{ content }}  
+<main class="container">
+<!-- horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1794381705838564"
+     data-ad-slot="4999984509"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+      {{ content }}
+<!-- horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1794381705838564"
+     data-ad-slot="4999984509"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </main>
 
 <!-- Footer
