--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,7 @@ gtag('config', '{{site.ganalytics}}');
      data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script><br>
       {{ content }}
 <!-- horizontal -->
 <ins class="adsbygoogle"
@@ -126,8 +126,8 @@ gtag('config', '{{site.ganalytics}}');
   <!-- CREDITS BEGIN.-->
   <!-- If you want to support my work, please donate to remove the credits. This helps me keep it up and running: https://www.wowthemes.net/donate/ -->
   <div class="credits mx-auto text-center mb-3">
-    <a class="hover-opacity font-weight-bold" href="https://bootstrapstarter.com/template-affiliates-bootstrap-jekyll/">
-      <img src="{{site.baseurl}}/assets/images/credits.png" alt="powered by WowThemes">
+    <a class="hover-opacity font-weight-bold" href="https://www.youtube.com/@idtechannel">
+      <img src="{{site.baseurl}}/assets/images/credits.png" alt="powered by Id Tech Channel">
     </a>
   </div>
   <!-- CREDITS END -->
