--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -65,9 +65,9 @@ post_class: post-template
                 {% endif %}
                 </small>
             </p>
-            
-			
-            
+ <br> 
+{% include youtubeplayer.html id=page.youtubeid %}         
+<br>           
             <!-- Prev/Next -->
             <div class="row PageNavigation mt-4 prevnextlinks d-flex justify-content-between">
               {% if page.previous.url %}
