--- a/_includes/youtubeplayer.html
+++ b/_includes/youtubeplayer.html
@@ -1,9 +1,1 @@
-<div class="embed-container">
-  <iframe
-      src="https://www.youtube.com/embed/{{ include.id }}"
-      width="100%"
-      height="315"
-      frameborder="0"
-      allowfullscreen="true">
-  </iframe>
-</div>
+<p><iframe style="width:100%;" height="315" src="https://www.youtube.com/embed/{{ include.id }}?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></p>
