--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,7 +68,7 @@ post_class: post-template
                 {% endif %}
                 </small>
             </p>
-           
+           {% include donate.html %}<br>
             <!-- Prev/Next -->
             <div class="row PageNavigation mt-4 prevnextlinks d-flex justify-content-between">
               {% if page.previous.url %}
