--- a/_includes/donate.html
+++ b/_includes/donate.html
@@ -1,4 +1,4 @@
-<h5><span>Donasi ID Tech Channel</span></h5>
+<center><h5><span>Donasi ID Tech Channel</span></h5></center>
 <div style="text-align: center;position:center;">
 <button onclick="sociabuzz('')" style="background:teal;color:white">SociaBuzz</button>
 <button onclick="saweria('')" style="background:grey;color:white">Saweria</button>
