--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -150,7 +150,7 @@ gtag('config', '{{site.ganalytics}}');
 <script src="{{ site.baseurl }}/assets/js/jquery.min.js"></script>   
 <script src="{{ site.baseurl }}/assets/js/bootstrap.min.js"></script>   
 <script src="{{ site.baseurl }}/assets/js/theme.js"></script>    
-    
+<script id="dsq-count-scr" src="//idtechannel.disqus.com/count.js" async></script>  
 </body>
     
 </html>
