--- a/_includes/donate.html
+++ b/_includes/donate.html
@@ -4,7 +4,12 @@
 <button onclick="saweria('')" style="background:grey;color:white">Saweria</button>
 <button onclick="kofi('')" style="background:darkgreen;color:white">Ko-Fi</button>
 <button onclick="paypal('')" style="background:darkblue;color:white">Paypal</button>
+</div>
+<div style="text-align: center;position:center;">
 <button onclick="shopeepay('')" style="background:orange;color:white">ShopeePay</button>
+<button onclick="dana('')" style="background:lightblue;color:white">Dana</button>
+<button onclick="bank('')" style="background:green;color:white">Bank</button>
+<button onclick="pulsa('')" style="background:lime;color:white">Pulsa</button>
 </div>
 <script>
     function sociabuzz (url) {
@@ -20,6 +25,15 @@
         location.href = url;
     }
     function shopeepay (url) {
+        location.href = url;
+    }
+    function dana (url) {
+        location.href = url;
+    }
+    function bank (url) {
+        location.href = url;
+    }
+    function pulsa (url) {
         location.href = url;
     }
 </script>
