--- a/_layouts/safelink.html
+++ b/_layouts/safelink.html
@@ -18,16 +18,7 @@ layout: default
 </div></div>
 
 <!-- Artikel -->
-<section class="row">
-  {% for post in site.posts %}
-      {% if post.featured == true %}
-          <div class="col-md-4 mb-5">
-          {% include postbox.html %}
-          </div>
-      {% endif %}
-  {% endfor %}
-  </div>
-</section>
+{{ content }}
 
 <!-- Iklan Tengah 2 -->
 <ins class="adsbygoogle"
@@ -40,7 +31,7 @@ layout: default
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 <div class="text-center">
-<button class="btn bt-success hidden" disabled="" id="gotolink" onclick="gotolink('{% page.safelink %}')">Go to Link</button>
+{% if page.safelink %}<button class="btn bt-success hidden" disabled="" id="gotolink" onclick="gotolink('{% page.safelink %}')">Go to Link</button>{% endif %}
 <div style="display: inline-block; margin: auto;"></div></div> 
 <!-- Iklan Tengah 3 -->
 <ins class="adsbygoogle"
