--- a/_layouts/safelink.html
+++ b/_layouts/safelink.html
@@ -18,7 +18,16 @@ layout: default
 </div></div>
 
 <!-- Artikel -->
-{{ content }}
+<section class="row">
+  {% for post in site.posts %}
+      {% if post.featured == true %}
+          <div class="col-md-4 mb-5">
+          {% include postbox.html %}
+          </div>
+      {% endif %}
+  {% endfor %}
+  </div>
+</section>
 
 <!-- Iklan Tengah 2 -->
 <ins class="adsbygoogle"
@@ -54,6 +63,7 @@ layout: default
       </div>
       {% endunless %}
       {% endfor %}
+      {{ content }}
     </div>
     <!-- Pagination -->
     <div class="bottompagination">
