--- a/_layouts/safelink.html
+++ b/_layouts/safelink.html
@@ -1,3 +1,117 @@
 ---
 layout: default
 ---
+<div class='separator-text' style='text-align:center'>
+ 
+<!-- LETAKAN IKLAN DIBAWAH SINI --> 
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1794381705838564"
+     data-ad-slot="9279811452"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+ <!-- PENUTUP --> 
+</div>
+
+<div style="margin:5px -18px">
+<center>
+<a class='button1' style="text-decoration:none;" href='#golink'><b>Click here to continue</b></a></center>
+</div>
+
+<!-- Isi Dengan Artikel Bebeas Mau Isi Apa -- >
+{{ content }}
+  
+<div style="text-align:center">
+
+
+<!-- LETAKAN IKLAN DIBAWAH SINI --> 
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1794381705838564"
+     data-ad-slot="9279811452"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+ <!-- PENUTUP --> 
+ 
+<div id='golink' class='separator' style='text-align:center'>
+<div class='safelink' dir='ltr' id='safelink' trbidi='on'>
+<center><span class='button1' id='daplong'>mohon tunggu...</span></center>
+<script>/*<![CDATA[*/ var currentURL=location.href; var str = currentURL; var res = str.replace("{{ page.url }}?url=", ""); function changeLink(){var decodedString = Base64.decode(res); window.open(decodedString,'_blank')}; /*]]>*/</script>
+<script>/*<![CDATA[*/ var currentURL=location.href; var str = currentURL; var res = str.replace("{{ page.url }}?url=", ""); document.write('<button id="download-safelink" class="visit-link button1" onclick="changeLink();"><a href="{{ page.safelinku">Menuju Link</a></button>'); var linkDL = document.getElementById("download-safelink"); var notif = document.getElementById("daplong"); var waktu = 15; var teks_waktu = document.createElement("span"); linkDL.parentNode.replaceChild(teks_waktu, linkDL); var id; id = setInterval(function () { waktu--; if (waktu < 0) { teks_waktu.parentNode.replaceChild(linkDL, teks_waktu); clearInterval(id); notif.style.display = "none"; linkDL.style.display = "inline-block"; } else { teks_waktu.innerHTML = "<br/>Memproses Link " + waktu.toString() + " detik"; }}, 1000); /*]]>*/</script></div>
+</div>
+</div>
+
+<style>
+h1 {
+  font-size:21px;
+  border-bottom: 1px solid #000;
+}
+/* Safelink Saifullah.id*/
+.button1{border-radius:7px;
+  background-color: #000000;
+  border: 5px solid black;
+  color: white !important;
+  padding: 7px 38px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px
+}
+a .button1 {
+  color: white !important
+}
+.ads-top {
+  padding: 5px 0 15px 0;
+  text-align: center
+}
+.ads-left,.ads-right {
+  display: inline-block;
+  float: left;
+  margin: 5px 15px 0 0
+}
+.ads-right {
+  float: right;
+  margin: 5px 0 0 15px
+}
+.visit-link,#daplong {
+  margin-right: 0;
+  padding: 11px 30px;
+  line-height: 25px;
+  font-family: Lato, sans-serif;
+  transition: all 0.3s ease-in-out
+}
+.visit-link {
+  padding: 11px 50px
+}
+#HTML99,#HTML99 .widget-content {
+  border: 0!important;
+  margin: 0!important;
+  padding: 0!important
+}
+/* Responsive */
+@media screen and (max-width: 768px) {
+  .ads-left,.ads-right {
+    display: block;
+    float: none;
+    margin: 5px 0 0;
+    text-align: center
+  }
+}
+h2,#header,#header-wrap,#header-wrapper {
+  display:none
+}
+textarea {
+  text-align:center;
+  font-size:15px;
+}
+.hide {
+  display:none;
+  visibility:hidden;
+}
+</style>
