--- a/_layouts/safelink.html
+++ b/_layouts/safelink.html
@@ -69,6 +69,46 @@ textarea {
   visibility:hidden;
 }
 </style>
+<style type="text/css">
+.tg  {
+  border-collapse:collapse;
+  border-spacing:10;
+}
+.tg td {
+  border-color:black;
+  border-style:solid;
+  border-width:1px;
+  font-family:Arial, sans-serif;
+  font-size:14px;
+  overflow:hidden;
+  padding:18px 20px;
+  word-break:normal;
+}
+.tg th {
+  border-color:black;
+  border-style:solid;
+  border-width:1px;
+  font-family:Arial, sans-serif;
+  font-size:14px;
+  font-weight:normal;
+  overflow:hidden;
+  padding:18px 20px;
+  word-break:normal;
+}
+.tg .tg-tmgx {
+  background-color:#9b9b9b;
+  border-color:#ffffff;
+  font-weight:bold;
+  text-align:center;
+  vertical-align:top
+}
+.tg .tg-7k2u {
+  background-color:#000000;
+  border-color:#ffffff;
+  text-align:center;
+  vertical-align:top
+}
+</style>
 <div class='separator-text' style='text-align:center'>
  
 <!-- LETAKAN IKLAN DIBAWAH SINI --> 
@@ -90,6 +130,41 @@ textarea {
 </div>
 
 <! -- artikel -->
+<h2>Private kursus ID Tech Channel</h2>
+<p>Kini telah di buka untuk umum bagi yang ingin belajar secara langsung dengan ID Tech Channel.</p>
+<p>Ada beragam paket kursus yang telah kami sediakan untuk anda pelajari secara langsung maupun offline.</p>
+<p>Paket yang tersedia sebagai berikut:</p>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-tmgx">Nama Paket</th>
+    <th class="tg-tmgx">Kategori</th>
+    <th class="tg-tmgx">Keterangan</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Beginner</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Clash</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran dasar</span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Medium</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Clash</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran rule</span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Pro</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Clash</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran script</span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Professional</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Clash</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran config</span></td>
+  </tr>
+</tbody>
+</table>
 {{ content }}
 
 <!-- LETAKAN IKLAN DIBAWAH SINI --> 
