--- a/_layouts/safelink.html
+++ b/_layouts/safelink.html
@@ -6,6 +6,10 @@ h1 {
   font-size:21px;
   border-bottom: 1px solid #000;
 }
+h3 {
+  font-size:16px;
+  border-bottom: 1px solid #000;
+}
 /* Safelink idtechannel*/
 .button1{border-radius:7px;
   background-color: #000000;
@@ -130,10 +134,19 @@ textarea {
 </div>
 
 <! -- artikel -->
-<h2>Private kursus ID Tech Channel</h2>
+<h3>Private kursus ID Tech Channel</h3>
 <p>Kini telah di buka untuk umum bagi yang ingin belajar secara langsung dengan ID Tech Channel.</p>
 <p>Ada beragam paket kursus yang telah kami sediakan untuk anda pelajari secara langsung maupun offline.</p>
 <p>Paket yang tersedia sebagai berikut:</p>
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:1;}
+.tg td{border-color:black;border-style:solid;border-width:2px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:18px 20px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:2px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:18px 20px;word-break:normal;}
+.tg .tg-tmgx{background-color:#9b9b9b;border-color:#ffffff;font-weight:bold;text-align:center;vertical-align:top}
+.tg .tg-7k2u{background-color:#000000;border-color:#ffffff;text-align:left;vertical-align:top}
+</style>
 <table class="tg">
 <thead>
   <tr>
@@ -144,24 +157,158 @@ textarea {
 </thead>
 <tbody>
   <tr>
-    <td class="tg-7k2u"><span style="color:#FFF">Beginner</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF">Clash</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran dasar</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Id Tech 1</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Openwrt</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran tentang openwrt</span></td>
   </tr>
   <tr>
-    <td class="tg-7k2u"><span style="color:#FFF">Medium</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF">Clash</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran rule</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Id Tech 2</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Mikrotik</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran tentang mikrotik</span></td>
   </tr>
   <tr>
-    <td class="tg-7k2u"><span style="color:#FFF">Pro</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Id Tech 3</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">Clash</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran script</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran tentang clash</span></td>
   </tr>
   <tr>
-    <td class="tg-7k2u"><span style="color:#FFF">Professional</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Id Tech 4</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Antenna</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran tentang antenna</span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Id Tech 5</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Youtube</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran tentang youtube</span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Id Tech 6</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Blog</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran tentang blog</span></td>
+  </tr>
+</tbody>
+</table>
+<br>
+<p>Dan jadwal yang akan kami bagi sesuai kelas masing-masing:</p>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-tmgx">Hari</th>
+    <th class="tg-tmgx">Kelas</th>
+    <th class="tg-tmgx">Materi Pembelajaran</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Senin</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Openwrt</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">
+    <li style="color:#FFF">Loadbalance</li>
+    <li style="color:#FFF">Pisah Trafik</li>
+    <li style="color:#FFF">Edit Template</li>
+    <li style="color:#FFF">Build Openwrt</li>
+    </span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Selasa</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Mikrotik</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">
+    <li style="color:#FFF">Loadbalance</li>
+    <li style="color:#FFF">Pisah Trafik</li>
+    <li style="color:#FFF">Edit Template</li>
+    <li style="color:#FFF">Build Openwrt</li>
+    </span></td>
+    </span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Rabu</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">Clash</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF">Pembelajaran config</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">
+    <li style="color:#FFF">Loadbalance</li>
+    <li style="color:#FFF">Pisah Trafik</li>
+    <li style="color:#FFF">Edit Template</li>
+    <li style="color:#FFF">Build Openwrt</li>
+    </span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Kamis</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Antenna</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">
+    <li style="color:#FFF">Loadbalance</li>
+    <li style="color:#FFF">Pisah Trafik</li>
+    <li style="color:#FFF">Edit Template</li>
+    <li style="color:#FFF">Build Openwrt</li>
+    </span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Jum'at</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Youtube</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">
+    <li style="color:#FFF">Loadbalance</li>
+    <li style="color:#FFF">Pisah Trafik</li>
+    <li style="color:#FFF">Edit Template</li>
+    <li style="color:#FFF">Build Openwrt</li>
+    </span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Sabtu</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">Blog</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">
+    <li style="color:#FFF">Loadbalance</li>
+    <li style="color:#FFF">Pisah Trafik</li>
+    <li style="color:#FFF">Edit Template</li>
+    <li style="color:#FFF">Build Openwrt</li>
+    </span></td>
+  </tr>
+</tbody>
+</table>
+<br>
+<p>Daftar harga paket yang akan kami bagi sediakan sesuai kelas masing-masing:</p>
+<table class="tg">
+<thead>
+  <tr>
+    <th class="tg-tmgx">Nama Paket</th>
+    <th class="tg-tmgx">Harga</th>
+    <th class="tg-tmgx">Massa</th>
+    <th class="tg-tmgx">Pendaftaran</th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Openwrt</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">150.000,-</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Mikrotik</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">200.000,-</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Clash</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">150.000,-</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Antenna</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">150.000,-</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Youtube</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">200.000,-</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+  </tr>
+  <tr>
+    <td class="tg-7k2u"><span style="color:#FFF">Blog</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF">200.000,-</span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
+    <td class="tg-7k2u"><span style="color:#FFF"></span></td>
   </tr>
 </tbody>
 </table>
