--- a/_layouts/safelink.html
+++ b/_layouts/safelink.html
@@ -276,32 +276,32 @@ textarea {
   <tr>
     <td class="tg-7k2u"><span style="color:#FFF">Openwrt</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">150.000,-</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF"><button onclick="daftarlink('')" class="visit-link button1">DAFTAR</button></span></td>
+    <td class="tg-7k2u"><span><button onclick="daftarlink('')" style="background:lime;color:white">DAFTAR</button></span></td>
   </tr>
   <tr>
     <td class="tg-7k2u"><span style="color:#FFF">Mikrotik</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">200.000,-</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF"><button onclick="daftarlink('')" class="visit-link button1">DAFTAR</button></span></td>
+    <td class="tg-7k2u"><span><button onclick="daftarlink('')" style="background:lime;color:white">DAFTAR</button></span></td>
   </tr>
   <tr>
     <td class="tg-7k2u"><span style="color:#FFF">Clash</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">150.000,-</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF"><button onclick="daftarlink('')" class="visit-link button1">DAFTAR</button></span></td>
+    <td class="tg-7k2u"><span><button onclick="daftarlink('')" style="background:lime;color:white">DAFTAR</button></span></td>
   </tr>
   <tr>
     <td class="tg-7k2u"><span style="color:#FFF">Antenna</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">150.000,-</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF"><button onclick="daftarlink('')" class="visit-link button1">DAFTAR</button></span></td>
+    <td class="tg-7k2u"><span><button onclick="daftarlink('')" style="background:lime;color:white">DAFTAR</button></span></td>
   </tr>
   <tr>
     <td class="tg-7k2u"><span style="color:#FFF">Youtube</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">200.000,-</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF"><button onclick="daftarlink('')" class="visit-link button1">DAFTAR</button></span></td>
+    <td class="tg-7k2u"><span><button onclick="daftarlink('')" style="background:lime;color:white">DAFTAR</button></span></td>
   </tr>
   <tr>
     <td class="tg-7k2u"><span style="color:#FFF">Blog</span></td>
     <td class="tg-7k2u"><span style="color:#FFF">200.000,-</span></td>
-    <td class="tg-7k2u"><span style="color:#FFF"><button onclick="daftarlink('')" class="visit-link button1">DAFTAR</button></span></td>
+    <td class="tg-7k2u"><span><button onclick="daftarlink('')" style="background:lime;color:white">DAFTAR</button></span></td>
   </tr>
 </tbody>
 </table>
