--- a/_layouts/safelink.html
+++ b/_layouts/safelink.html
@@ -74,9 +74,12 @@ textarea {
 }
 </style>
 <style type="text/css">
-.tg  {
-  border-collapse:collapse;
-  border-spacing:10;
+@media screen and (max-width: 768px) {
+  .tg  {
+    border-collapse:collapse;
+    border-spacing:10;
+    width:100%;
+  }
 }
 .tg td {
   border-color:black;
