--- a/_layouts/safelink.html
+++ b/_layouts/safelink.html
@@ -150,6 +150,7 @@ textarea {
 .tg .tg-tmgx{background-color:#9b9b9b;border-color:#ffffff;font-weight:bold;text-align:center;vertical-align:top}
 .tg .tg-7k2u{background-color:#000000;border-color:#ffffff;text-align:left;vertical-align:top}
 </style>
+<center>
 <table class="tg">
 <thead>
   <tr>
@@ -308,6 +309,7 @@ textarea {
   </tr>
 </tbody>
 </table>
+</center>
 {{ content }}
 
 <!-- LETAKAN IKLAN DIBAWAH SINI --> 
