--- a/_layouts/safelink.html
+++ b/_layouts/safelink.html
@@ -192,8 +192,10 @@ textarea {
   </tr>
 </tbody>
 </table>
+</center>
 <br>
 <p>Dan jadwal yang akan kami bagi sesuai kelas masing-masing:</p>
+<center>
 <table class="tg">
 <thead>
   <tr>
@@ -266,8 +268,10 @@ textarea {
   </tr>
 </tbody>
 </table>
+</center>
 <br>
 <p>Daftar harga paket yang akan kami bagi sediakan sesuai kelas masing-masing:</p>
+<center>
 <table class="tg">
 <thead>
   <tr>
